@@ -39,8 +39,6 @@ __revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
 import os
 import os.path
 import string
-import sys
-import types
 from UserDict import UserDict
 
 import SCons.Action
