@@ -32,8 +32,6 @@ selection method.
 
 __revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
 
-import SCons.Util
-
 def generate(env):
     if not env.has_key('ENV'):
         env['ENV']        = {}
