@@ -30,8 +30,6 @@ This module implements the dependency scanner for Fortran code.
 __revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
 
 
-import copy
-import os.path
 import re
 
 import SCons.Node
