@@ -29,7 +29,6 @@ Generic Taskmaster.
 
 __revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
 
-import copy
 import string
 import sys
 
